--- a/index.html
+++ b/index.html
@@ -266,7 +266,12 @@
                     <ol>
                         <li><strong>ND/2019/04 </strong>(CEDD - Fanling Bypass)</li>
                         <li><strong>DC/2022/01 </strong>(DSD - Drainage Improvement Works in Tsim Sha Tsui)</li>
-                        <li><strong>DE/2018/03 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li><li><strong>DE/2018/04 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li><li><strong>DE/2018/06 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li><li><strong>DE/2018/07 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li><li><strong>...more</strong> Non-Government projects</li>
+                        <li><strong>DE/2018/03 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
+                        <li><strong>DE/2018/04 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
+                        <li><strong>DE/2018/06 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
+                        <li><strong>DE/2018/07 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
+                        <li><strong>IS/2022/02 </strong>(DSD Improvement Works at Mui Wo - Phase 2)</li>
+                        <li><strong>...more</strong> Non-Government projects</li>
                     </ol>
                 </div>
             </div>
