--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
                         <li><strong>DE/2018/06 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
                         <li><strong>DE/2018/07 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
                         <li><strong>IS/2022/02 </strong>(DSD Improvement Works at Mui Wo - Phase 2)</li>
+                        <li><strong>21/WSD/21 </strong>(WSD Relocation of Diamond Hill Fresh Water and Salt Water Service Reservoirs to Caverns - Website with CMS)</li>
                         <li><strong>...more</strong> Non-Government projects</li>
                     </ol>
                 </div>
