--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
                 <h4 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Project References</strong></h4>
                 <div class="mbr-text mbr-fonts-style display-7">
                     <ol>
-                        <li><strong>ND/2019/04 </strong>(CEDD - Fanling Bypass)</li>
-                        <li><strong>DC/2022/01 </strong>(DSD - Drainage Improvement Works in Tsim Sha Tsui)</li>
-                        <li><strong>DE/2018/03 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
-                        <li><strong>DE/2018/04 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
-                        <li><strong>DE/2018/06 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
-                        <li><strong>DE/2018/07 </strong>(DSD Shek Wu Hui Effluent Polishing Plant)</li>
-                        <li><strong>IS/2022/02 </strong>(DSD Improvement Works at Mui Wo - Phase 2)</li>
+                        <li><strong>ND/2019/04 </strong>(CEDD Fanling Bypass - DWSS)</li>
+                        <li><strong>DC/2022/01 </strong>(DSD Drainage Improvement Works in Tsim Sha Tsui - eDMS)</li>
+                        <li><strong>DE/2018/03 </strong>(DSD Shek Wu Hui Effluent Polishing Plant - Blockchain CDE)</li>
+                        <li><strong>DE/2018/04 </strong>(DSD Shek Wu Hui Effluent Polishing Plant - Blockchain CDE)</li>
+                        <li><strong>DE/2018/06 </strong>(DSD Shek Wu Hui Effluent Polishing Plant - Blockchain CDE)</li>
+                        <li><strong>DE/2018/07 </strong>(DSD Shek Wu Hui Effluent Polishing Plant - Blockchain CDE)</li>
+                        <li><strong>IS/2022/02 </strong>(DSD Improvement Works at Mui Wo, Phase 2 - DWSS)</li>
                         <li><strong>21/WSD/21 </strong>(WSD Relocation of Diamond Hill Fresh Water and Salt Water Service Reservoirs to Caverns - Website with CMS)</li>
                         <li><strong>...more</strong> Non-Government projects</li>
                     </ol>
