--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           
            <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                 <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tzXzA9VHWD-modal" data-bs-target="#tzXzA9VHWD-modal">
-                    <img class="w-100" src="assets/images/wsdlogo-324x216.png" alt="Chun Wo" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tzXzA9VHWD" data-bs-target="#lb-tzXzA9VHWD">
+                    <img class="w-100" src="assets/images/wsdlogo-324x216.png" alt="WSD" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tzXzA9VHWD" data-bs-target="#lb-tzXzA9VHWD">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
