--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 </div>
            
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                    <img class="w-100" src="assets/images/wsdlogo-324x216.png" alt="Chun Wo" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tN4znJUasl" data-bs-target="#lb-tN4znJUasl">
+                    <img class="w-100" src="assets/images/wsdlogo-324x216.png" alt="WSD" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tN4znJUasl" data-bs-target="#lb-tN4znJUasl">
                 </div>
 
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
