--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <div class="mbr-section-head">
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
                 <strong>Contact Us</strong></h3>
-            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-7">Room L, 4B, 4/F, Cheong Lung Industrial Building, 10 Cheung Yee Street, Lai Chi Kok, Kowloon, Hong Kong<br>Tel.: (852) 2260-7112</h4>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-7">Room J, 4B, 4/F, Cheong Lung Industrial Building, 10 Cheung Yee Street, Lai Chi Kok, Kowloon, Hong Kong<br>Tel.: (852) 2260-7112</h4>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
