--- a/index.html
+++ b/index.html
@@ -206,7 +206,12 @@
                 <h4 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Project References</strong></h4>
                 <div class="mbr-text mbr-fonts-style display-7">
                     <ol>
-                        <li><strong>21/WSD/21 </strong>(WSD Relocation of Diamond Hill Fresh Water and Salt Water Service Reservoirs to Caverns - Website with CMS)</li>
+                        <li><strong>DC/2024/03 </strong>(DSD Drainage Improvement Works in Wong Tai Sin - DWSS)</li>
+                        <li><strong>DC/2024/04 </strong>(DSD Drainage Improvement Works in Kowloon City - DWSS)</li>
+                        <li><strong>DC/2024/06 </strong>(DSD Shek Kip Mei Stormwater Storage Scheme and Drainage Improvement Works in Eastern District and Lei Yue Mun - DWSS)</li>
+                        <li><strong>DC/2024/07 </strong>(DSD Sha Tin Park Stormwater Storage Scheme and Tai Po Old Market Stormwater Storage Scheme - DWSS)</li>
+                        <li><strong>DC/2024/08 </strong>(DSD Kwun Tong Promenade Stormwater Storage Scheme - DWSS)</li>
+                        <li><strong>21/WSD/21 </strong>(WSD Relocation of Diamond Hill Fresh Water and Salt Water Service Reservoirs to Caverns - Environmental Monitoring Website)</li>
                         <li><strong>IS/2022/02 </strong>(CEDD Improvement Works at Mui Wo, Phase 2 - DWSS)</li>
                         <li><strong>IS/2022/02 </strong>(CEDD Improvement Works at Mui Wo, Phase 2 - eDMS)</li>
                         <li><strong>ND/2019/04 </strong>(CEDD Fanling Bypass - DWSS)</li>
@@ -312,7 +317,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2023 DBC Software Limited - All Rights Reserved
+                    © Copyright 2024 DBC Software Limited - All Rights Reserved
                 </p>
             </div>
         </div>
